--- a/style.css
+++ b/style.css
@@ -118,3 +118,77 @@ h1 {
 .disparition {
   opacity: 0;
 }
+
+@media screen and (max-width: 850px) {
+  .container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+  }
+
+  .bloc__prevision--heure,
+  .bloc__prevision--jour {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .bloc__h,
+  .bloc__j {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .prevision__heure--nom,
+  .prevision__jour--nom {
+    display: block;
+    width: 50%;
+    margin-bottom: 0;
+    border-right: 1px solid #f1f1f1;
+    text-align: center;
+    height: 50px;
+    line-height: 50px;
+  }
+
+  .prevision__heure--valeur,
+  .prevision__jour--temp {
+    border-right: 0;
+    display: block;
+    width: 50%;
+    text-align: center;
+  }
+  .bloc__logo--info {
+    flex-direction: column;
+    margin-bottom: 20px;
+  }
+  .bloc__info .temps,
+  .bloc__info .localisation,
+  .bloc__info .temperature {
+    font-size: 40px;
+    text-align: center;
+  }
+
+  .bloc__h,
+  .bloc__j {
+    border-right: 0;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  h1 {
+    font-size: 30px;
+  }
+  .bloc__info .temps {
+    font-size: 20px;
+    text-align: center;
+  }
+  .bloc__info .temperature {
+    font-size: 30px;
+    text-align: center;
+  }
+  .bloc__info .localisation {
+    font-size: 20px;
+    text-align: center;
+  }
+}
